k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sherpany-app-service
  namespace: sherpany-app
  labels:
    app: sherpany-app
spec:
  selector:
    app: sherpany-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: LoadBalancer
