k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sherpany-app-ingress
  namespace: sherpany-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: sherpany-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sherpany-app-service
                port:
                  number: 80
